# nexus-ai

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  config.yaml  desc.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  publish.yml  release.yml
docs/plans/: 2026-01-02-pypi-publishing-automation-fix.md
nexus/: __init__.py
nexus/cli/: completion.py  core.py  fuzzy_selector.py  main.py  prompts.py  repl.py  utils.py
nexus/cli/commands/: __init__.py  chat.py  completion.py  default.py  info.py  sessions.py
nexus/config/: config_manager.py  models.py
nexus/core/: app.py  completion_handler.py  provider_manager.py
nexus/prompts/: __init__.py  manager.py
nexus/providers/: anthropic_provider.py  base.py  ollama_provider.py  openai_provider.py  openrouter_provider.py
nexus/session/: __init__.py  manager.py  models.py
nexus/utils/: cache.py  crypto.py  errors.py  logging.py  path_security.py
tests/: conftest.py  test_actual_repl.py  test_cache.py  test_cli_default.py  test_cli_performance.py  test_cli_utils.py  test_completion.py  test_config_manager.py  test_crypto.py  test_default_enhanced.py  test_exceptions.py  test_fuzzy_selector.py  test_optimization.py  test_path_security.py  test_prompts_cli.py  test_prompts_manager_security.py  test_providers_anthropic.py  test_providers_base.py  test_providers_ollama.py  test_providers_openai.py  test_providers_openrouter.py  test_repl.py  test_repl_performance.py  test_repl_real.py  test_session_encryption.py  test_session_manager.py  test_session_models.py  test_sessions_cli.py
